css fixes everywhere

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,6 @@
 
 
 .body-content {
-  background: $my-blue;
+  background: rgb(65,138,255);
+  background: linear-gradient(52deg, rgba(65,138,255,1) 0%, rgba(8,104,255,1) 100%);
 }
