--- a/app/views/components/_navbar-home.html.erb
+++ b/app/views/components/_navbar-home.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light d-flex justify-content-between">
 
-  <div class="navbar-logo">
+  <div class="navbar-home">
     <%= link_to root_path, class: "navbar-brand pl-4" do %>
       <%= image_tag "logo.svg" %>
     <% end %>
