--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-light d-flex justify-content-between">
+<div class="navbar bg-white navbar-expand-sm navbar-light d-flex justify-content-between">
 
-  <div class="navbar-logo logo-hide">
+  <div class="navbar-home logo-hide">
     <%= link_to root_path, class: "navbar-brand pl-4" do %>
       <%= image_tag "logo.svg" %>
     <% end %>
