--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
 
     <% if action_name != "show" %>
-      <%= render 'components/navbar-logo' %>
+      <%= render 'components/navbar-home' %>
     <% else %>
       <%= render 'components/navbar' %>
     <% end %>
