--- a/app/views/roadmaps/edit.html.erb
+++ b/app/views/roadmaps/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container">
+<div class="home-container0">
   <div class="home-content sign-up zi-9999">
     <h1>Éditer une roadmap</h1>
 
