--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -12,7 +12,7 @@
 
 .dropdown-navbar {
   display: none;
-  position: absolute;
+  position: fixed;
   right: 34px;
   padding: 20px;
   margin-top: 10px;
@@ -20,15 +20,8 @@
 
 .dropdown-roadmap {
   display: none;
-  margin-top: -10px;
-  position: absolute;
-}
-
-.dropdown-menu {
-  left: auto;
-  margin-left: 33px;
-  min-width: 208px;
-  min-height: 124px;
+  top: 70px;
+  position: fixed;
 }
 
 .dropdown-item {
@@ -48,7 +41,7 @@
 
 .dropdown-share {
   display: none;
-  position: absolute;
+  position: fixed;
   padding: 20px;
   margin-top: 104px;
   min-width: 280px;
@@ -60,12 +53,10 @@
 
 .roadmaps-list {
   overflow-y: scroll;
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   padding: 10px 20px;
-  right: -17px;
 }
 
 @media(max-width: 414px) {
@@ -90,4 +81,5 @@ span.roadmap-name-ellipsis {
 
 .roadmap-name {
   height: 100%;
+  background: none;
 }
