--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  position: absolute;
-  bottom: 8%;
+  position: fixed;
+  bottom: 18%;
   p {
     color: white;
   }
@@ -11,6 +11,7 @@
   .footer {
   position: relative;
   margin-top: 140px;
+  padding-bottom:10px;
 
   p {
     color: white;
