--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container">
+<div class="home-container0">
   <div class="home-content forgot-password zi-9999">
     <h1>Mot de passe oublié ?</h1>
 
