--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -22,6 +22,8 @@
   display: none;
   top: 70px;
   position: fixed;
+  width: 100%;
+  height: 122px;
 }
 
 .dropdown-item {
@@ -57,6 +59,11 @@
   bottom: 0;
   left: 0;
   padding: 10px 20px;
+  position: absolute;
+}
+
+.roadmaps-list a {
+  text-decoration: none;
 }
 
 @media(max-width: 414px) {
@@ -77,6 +84,8 @@ span.roadmap-name-ellipsis {
   max-width: 159px;
   white-space: nowrap;
   display: inline-flex;
+  height: 60px;
+  align-items: center;
 }
 
 .roadmap-name {
