padding on profile icon only on desktop, i dont know

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,8 +31,10 @@
   }
 }
 
-.menu {
-  padding-top: 3px
+@media(min-width: 416px) {
+  .menu {
+    padding-top: 3px
+  }
 }
 
 .emoji, .emoji img {
