mobile fixe padding

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container0">
-  <div class="home-content forgot-password zi-9999">
+  <div class="main-content forgot-password zi-9999">
     <h1>Mot de passe oublié ?</h1>
 
     <div class="devise-links-1">
