--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container0">
-  <div class="home-content sign-up zi-9999">
+  <div class="main-content sign-up zi-9999">
     <h1>Inscription</h1>
 
     <div class="devise-links-1">
