--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container0">
-  <div class="home-content sign-up zi-9999">
+  <div class="main-content sign-up zi-9999">
     <h1>Editer mon profil</h1>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
