--- a/app/views/roadmaps/edit.html.erb
+++ b/app/views/roadmaps/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container0">
-  <div class="home-content sign-up zi-9999">
+  <div class="main-content sign-up zi-9999">
     <h1>Éditer une roadmap</h1>
 
     <%= simple_form_for @roadmap do |f| %>
