--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -81,7 +81,7 @@
 span.roadmap-name-ellipsis {
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 159px;
+  max-width: 9vh;
   white-space: nowrap;
   display: inline-flex;
   height: 60px;
