cool map anim on landing

--- a/app/assets/stylesheets/components/_character.scss
+++ b/app/assets/stylesheets/components/_character.scss
@@ -2,7 +2,8 @@
   height: calc(100vh - 80px);
   position: absolute;
   display: flex;
-  right: 17%;
+  right: 10%;
+  top: 40px;
 }
 
 @media(max-width:768px) {
