--- a/app/views/components/_navbar-home.html.erb
+++ b/app/views/components/_navbar-home.html.erb
@@ -1,26 +1,16 @@
 <div class="navbar navbar-expand-sm navbar-light d-flex justify-content-between">
 
   <div class="navbar-home">
-    <%= link_to root_path, class: "navbar-brand pl-4" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "logo.svg" %>
     <% end %>
   </div>
 
   <% if user_signed_in? %>
-
-    <%= render 'components/roadmap-select.html.erb' %>
-
     <div class="navbar-links">
-      <div class="collapse navbar-collapse pr-4" id="navbarSupportedContent">
-        <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "nav-link c-red" %>
-      </div>
 
-      <div class="menu pr-4">
+      <div class="menu">
         <%= image_tag "profile.png", alt: "user icon", class: "user-icon emoji" %>
-        <div class="dropdown dropdown-navbar">
-          <%= link_to "Profil", edit_user_registration_path, class: "nav-link" %>
-          <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "nav-link mobile-link c-red" %>
-        </div>
       </div>
     </div>
 
@@ -31,4 +21,11 @@
     </div>
 
   <% end %>
+</div>
+
+<!-- Dropdown de l'emoji profil : en absolute hors navbar (bug mobile si inclus dans navbar) -->
+
+<div class="dropdown dropdown-navbar">
+  <%= link_to "Profil", edit_user_registration_path, class: "nav-link" %>
+  <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "nav-link c-red" %>
 </div>
