--- a/app/views/components/_navbar-home.html.erb
+++ b/app/views/components/_navbar-home.html.erb
@@ -10,7 +10,9 @@
     <div class="navbar-links">
 
       <div class="menu">
-        <%= image_tag "profile.png", alt: "user icon", class: "user-icon emoji" %>
+        <div class="emoji-link">
+          <%= image_tag "profile.png", alt: "user icon", class: "user-icon emoji" %>
+        </div>
       </div>
     </div>
 
