--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -12,7 +12,9 @@
     <div class="navbar-links">
 
       <div class="menu">
-        <%= image_tag "profile.png", alt: "user icon", class: "user-icon emoji" %>
+        <div class="emoji-link bg-gray">
+          <%= image_tag "profile.png", alt: "user icon", class: "user-icon emoji" %>
+        </div>
       </div>
     </div>
 
