--- a/app/views/components/_roadmap-select.html.erb
+++ b/app/views/components/_roadmap-select.html.erb
@@ -1,17 +1,23 @@
 <% if controller_name === "roadmaps" && action_name === "show" %>
   <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
   <!-- Si connecté & sur sa roadmap -->
-    <div class="roadmap-selection pl-4">
-      <%= link_to image_tag("trash.png"), roadmap_path(@roadmap),
+    <div class="roadmap-selection">
+      <div class="emoji-link bg-red02">
+        <%= link_to image_tag("trash.png"), roadmap_path(@roadmap),
                         class: "decoration-none emoji emoji-roadmap",
                         method: :delete,
                         data: { confirm: "Êtes-vous sûr(e) de vouloir supprimer la roadmap? Son contenu disparaîtra à tout jamais." } %>
-      <%= link_to image_tag("pen.png"), edit_roadmap_path(@roadmap), class: "decoration-none emoji emoji-roadmap" %>
+      </div>
+      <div class="emoji-link bg-yellow02">
+        <%= link_to image_tag("pen.png"), edit_roadmap_path(@roadmap), class: "decoration-none emoji emoji-roadmap" %>
+      </div>
       <button class="roadmap-name">
         <span class="roadmap-name-ellipsis"><%= @roadmap.name %></span>
         <%= image_tag "dropdown-arrow.svg", class: "ml-1", alt: "dropdown arrow" %>
       </button>
-      <%= render 'components/share_button' %>
+      <div class="emoji-link bg-blue02">
+        <%= render 'components/share_button' %>
+      </div>
     </div>
   <% else %>
   <!-- Si pas connecté ou pas sur sa roadmap -->
