--- a/app/views/roadmaps/show.html.erb
+++ b/app/views/roadmaps/show.html.erb
@@ -15,3 +15,8 @@
     <% end %>
   </div>
 </div>
+
+<!-- Afficher un loader cool si je crée une roadmap : -->
+<% if request.referrer.last(3) == 'new' %>
+  <%= render 'components/loader_rocket' %>
+<% end %>
