--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -39,7 +39,8 @@
 button.roadmap-name,
 button.roadmap-name:focus,
 button.roadmap-name:hover {
-  background: transparent;
+  background: $my-gray;
+  border-radius: 25px;
   border: 0px;
   box-shadow: none;
   outline: none;
