--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   box-shadow: 2px 3px 0px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  max-width: 200px;
+  max-width: 310px;
   max-height: 130px;
   overflow: hidden;
   position: relative;
@@ -70,10 +70,10 @@
   overflow-y: scroll;
   top: 0;
   bottom: 0;
-  left: 0;
-  padding: 10px 20px;
+  left: 20px;
+  padding: 10px 20px 10px 20px;
   position: absolute;
-  max-width: 100%;
+  width: 100%;
   text-align: left;
 }
 
@@ -92,7 +92,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 span.roadmap-name-ellipsis {
@@ -107,5 +107,6 @@ span.roadmap-name-ellipsis {
 
 .roadmap-name {
   height: 100%;
-  background: none;
+  border-radius: 25px;
+  width: 200px;
 }
