--- a/app/views/columns/_column_admin.html.erb
+++ b/app/views/columns/_column_admin.html.erb
@@ -7,8 +7,20 @@
         <p>Description du problème rencontré par les utilisateurs</p>
       </div>
       <div class="goal">
-        <%= render 'components/button', text:'Ajouter un objectif', class: "w-100 mb-4" %>
-        <p> <%= image_tag "target.png", class: "emoji" %> Objectif Business </p>
+        <%= simple_form_for @new_kpi, url: roadmap_theme_kpis_path(id: @new_kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: :post do |f| %>
+          <%= f.button :submit, "Ajouter un objectif", class: "btn btn-white w-100" %>
+        <% end %>
+
+         <% theme.kpis.each do |kpi| %>
+            <%= simple_form_for kpi, url: roadmap_theme_kpi_path(id: kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: :patch do |f| %>
+              <div class="kpi">
+                <div class="kpi-emoji"><%= image_tag "target", class: "emoji" %></div>
+                <%= f.input :description, input_html: {value: kpi.description, class: "kpi-description_#{kpi.id}"}, label: false  %>
+              </div>
+              <%= f.button :submit, "Mettre à jour", style: "display: none", id: "kpi-patch_#{kpi.id}" %>
+            <% end %>
+          <% end %>
+
       </div>
       <div class="improvement">
         <%= render 'components/button', text:'Ajouter une amélioration', class: "w-100 mb-4" %>
