--- a/app/views/columns/_column_guest.html.erb
+++ b/app/views/columns/_column_guest.html.erb
@@ -5,7 +5,7 @@
       <h2>Thème</h2>
       <p>Description du problème rencontré par les utilisateurs</p>
     </div>
-    <div class="goal">
+    <div class="kpis">
       <p><%= image_tag "target.png", class: "emoji" %> Objectif Business </p>
     </div>
     <div class="improvement">
