--- a/app/views/columns/_column_admin_kpis.html.erb
+++ b/app/views/columns/_column_admin_kpis.html.erb
@@ -1,6 +1,6 @@
 <div class="kpis">
 <!-- Create Kpis -->
-<%= simple_form_for @new_kpi, url: roadmap_theme_kpis_path(id: @new_kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: :post, remote: true do |f| %>
+<%= simple_form_for @new_kpi, url: roadmap_theme_kpis_path(id: @new_kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), html: {id: "nwkpi-#{theme.id}"}, method: :post, remote: true do |f| %>
   <%= f.button :submit, "Ajouter un objectif", class: "btn btn-white w-100" %>
 <% end %>
 <!-- Index/Update/Destroy Kpis -->
@@ -10,10 +10,10 @@
         <div class="kpi-emoji">
           <%= image_tag "target", class: "emoji" %>
          </div>
-        <%= f.input :description, input_html: {value: kpi.description, class: "kpi-description"}, label: false  %>
-        <%= f.button :submit, class: "patch-kpi", name: "patch-kpi", style: "display: none" %>
+        <%= f.input :description, input_html: {value: kpi.description, class: "kpi-description", id: "desckpi-#{kpi.id}"}, label: false  %>
+        <%= f.button :submit, class: "patch-kpi", name: "patch-kpi", style: "display: none", id: "patchkpi-#{kpi.id}" %>
       </div>
     <% end %>
-    <%= button_to 'delete', roadmap_theme_kpi_path(id: kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: 'delete', class: "delete-kpi", style: "display: none;", remote: true %>
+    <%= button_to 'delete', roadmap_theme_kpi_path(id: kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: 'delete', class: "delete-kpi", style: "display: none;", id: "deletekpi-#{kpi.id}", remote: true %>
   <% end %>
 </div>
