--- a/app/assets/stylesheets/components/_kpi.scss
+++ b/app/assets/stylesheets/components/_kpi.scss
@@ -11,16 +11,39 @@
   border: transparent;
   padding-left:10px;
   box-shadow: none;
-}
-
-.kpi_description textarea:hover, .kpi_description textarea:focus {
-  border: 1px dashed #979797;
+  border: 2px dashed #979797;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: none;
-  margin: -1px;
+  min-height: 41px;
+}
+
+.kpi .form-group input:hover, .kpi .form-group input:focus,
+.kpi .form-group textarea:hover, .kpi .form-group textarea:focus {
+  width: 100%;
+  background: white;
+  border: transparent;
+  padding-left:10px;
+  box-shadow: none;
+  border: 2px dashed $my-black;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: none;
 }
 
 .kpi-emoji {
   margin-bottom: 1rem;
+}
+
+.kpi_description {
+  margin: 1% 1% 3% 3%;
+  width: 100%;
+}
+
+.kpis {
+  margin-bottom: 2rem;
+}
+
+.kpi textarea.form-control.is-valid {
+  padding-right: 10px !important;
 }
