--- a/app/views/roadmaps/show.html.erb
+++ b/app/views/roadmaps/show.html.erb
@@ -4,7 +4,7 @@
     <!-- Si connecté & sur sa roadmap -->
       <%= render 'columns/column_admin' %>
 
-      <%= simple_form_for @new_theme, url: roadmap_themes_path(@roadmap), method: :post do |f| %>
+      <%= simple_form_for @new_theme, url: roadmap_themes_path(@roadmap), method: :post, remote: true do |f| %>
         <% if @themes.first.nil? %>
           <%= f.button :submit, "+ Crée ton premier thème", class: "btn btn-white create-theme" %>
         <% else %>
