guest roadmap cool ux & static image

--- a/app/assets/stylesheets/components/_kpi.scss
+++ b/app/assets/stylesheets/components/_kpi.scss
@@ -47,3 +47,11 @@
 .kpi textarea.form-control.is-valid {
   padding-right: 10px !important;
 }
+
+.kpi-guest {
+  margin-bottom: 1rem;
+}
+
+.kpi-guest img {
+  margin-bottom: 6px;
+}
