--- a/app/assets/stylesheets/components/_theme.scss
+++ b/app/assets/stylesheets/components/_theme.scss
@@ -1,6 +1,16 @@
 .theme {
 }
 
+.theme-img {
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  margin-bottom: 20px;
+  margin-top: -20px;
+}
+
 .theme .form-group input,
 .theme .form-group textarea, {
   width: 100%;
